Fix delete button that renders outside container on mobile display.

--- a/src/App.css
+++ b/src/App.css
@@ -104,13 +104,13 @@ form {
 
 .recipe-ingredient-container {
   display: grid;
-  grid-template-columns: minmax(0, 2fr) minmax(0, 1fr) minmax(0, 1fr) minmax(
+  grid-template-columns: minmax(0, 3fr) minmax(0, 1fr) minmax(0, 1fr) minmax(
       0,
-      0.5fr
+      1fr
     );
   grid-gap: 20px;
-  border: 2px solid lightgray;
-  box-shadow: 5px 5px 5px whitesmoke;
+  border: 2px solid #d3d3d3;
+  box-shadow: 5px 5px 5px #f5f5f5;
   padding: 10px 5px;
   margin-top: 20px;
 }
